--- a/episode.css
+++ b/episode.css
@@ -11,6 +11,15 @@ body {
 
   background-color: rgba(8, 8, 8, 0.89);
 }
+::-webkit-scrollbar {
+  width: 14px;
+}
+::-webkit-scrollbar-track {
+  background-color: #818080;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #4b3b3b
+}
 
 .navbar {
   display: flex;
@@ -35,7 +44,14 @@ body {
 .navbar li:nth-child(2) {
   margin-top: -10px;
   margin-right: 70px;
+
+ 
 }
+.navbar a{
+  text-decoration: none;
+
+}
+
 .logo img {
   width: 180px;
   display: flex;
@@ -81,21 +97,49 @@ body {
 .main .image{
   flex: 3;
 }
+.main img{
+  box-shadow: 7px 7px 6px 2px rgba(18,0,0,0.54);
+  -webkit-box-shadow: 7px 7px 6px 2px rgba(18,0,0,0.54);
+  -moz-box-shadow: 7px 7px 6px 2px rgba(18,0,0,0.54);
+  border-radius: 10px;
+}
+
 .main .image img{
   width: 75%;
 }
 .main .summarey{
   flex: 4;
   flex-wrap: wrap;
-  line-height: 3;
+  line-height: 2;
 }
 .main .detailse{
   flex: 3;
   margin-left: 30px;
+  
+}
+.main .detailse div{
+  margin-top: 20px;
 }
 .main h1{
     color: white;
     font-size: 50px;
+}
+.form{
+  padding: 20px;
+  width: 100%;
+}
+.form input{
+  height: 30px;
+  width: 25%;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+}
+.form select{
+  height: 30px;
+  width: 25%;
+  border-radius: 10px;
+  outline: none;
 }
 .episodes{
     display: flex;
