--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ body {
 
   background-color: rgba(8, 8, 8, 0.89);
 }
+::-webkit-scrollbar {
+  width: 14px;
+}
+::-webkit-scrollbar-track {
+  background-color: #818080;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #4b3b3b
+}
 
 .navbar {
   display: flex;
@@ -35,6 +44,10 @@ body {
 .navbar li:nth-child(2) {
   margin-top: -10px;
   margin-right: 70px;
+}
+.navbar a{
+  text-decoration: none;
+
 }
 .logo img {
   width: 180px;
