--- a/episode.css
+++ b/episode.css
@@ -82,10 +82,9 @@ body {
   width: 100%;
   margin-top: -100px;
   background-size: cover;
-  align-items: center;
+  
   overflow-x: hidden;
   justify-content: center;
-  display: flex;
   background-position: center;
   min-height: 710px;
   color: white;
@@ -93,6 +92,14 @@ body {
   url(https://assets.nflxext.com/ffe/siteui/vlv3/a1dc92ca-091d-4ca9-a05b-8cd44bbfce6a/f9368347-e982-4856-a5a4-396796381f28/RS-en-20191230-popsignuptwoweeks-perspective_alpha_website_large.jpg);
 
   padding-left: 50px;
+}
+.show-detailse{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 150px;
+
+
 }
 .main .image{
   flex: 3;
@@ -116,6 +123,18 @@ body {
   flex: 3;
   margin-left: 30px;
   
+}
+.main .parson{
+  display: flex;
+  flex-wrap: wrap;
+}
+.parson .card{
+  margin: 10px;
+}
+.parson img{
+  width: 200px;
+  height: 200px;
+  object-fit: fill;
 }
 .main .detailse div{
   margin-top: 20px;
@@ -294,6 +313,21 @@ li a {
   flex-direction: row;
   font-size: 16px;
 }
+.splash{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background-color: #1d1c1d;
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+.hiden{
+  display: none;
+}
 
 @media (min-width: 250px) and (max-width: 980px) {
   body {
@@ -415,3 +449,5 @@ li a {
     margin-right: 10px;
   }
 }
+
+
