--- a/style.css
+++ b/style.css
@@ -299,6 +299,21 @@ li a {
   flex-direction: row;
   font-size: 16px;
 }
+.splash{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background-color: #1d1c1d;
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+.hiden{
+  display: none;
+}
 
 @media (min-width: 250px) and (max-width: 980px) {
   body {
